[package]
name = "p8n-amd64"
version = "0.1.0"
authors = ["Kai Michaelis <kai.michaelis@9elements.com>"]
edition = "2018"

[dependencies]
num-derive = "0.2.5"
num-traits = "0.2"
byteorder = "1.3"

p8n-types = "3"
p8n-rreil-macro = "*" 

[patch.crates-io]
p8n-types = { path = "../base/types" }
p8n-rreil-macro = { path = "../base/rreil-macro" }
